fix: 代码优化
(cherry picked from commit 22c7d0dcad40f5d6859d3e1ba960e5a47a5b654f)